lab1/Test/L1-A-3-67.cmm
struct OdArTK45ledh47BJf t23uPkHiPoEYBeF4 ( float 
  jvsoSkQpM , float MUyipMSD [ 747477124 ] ^, int A5wV 
  ) {
}
$'